[gd_scene load_steps=19 format=3 uid="uid://c4qktx05mkq1i"]

[ext_resource type="Script" uid="uid://clbs6713ks20m" path="res://scripts/Game.gd" id="1_2v3xy"]
[ext_resource type="Script" uid="uid://cdc4jpr00h1xb" path="res://scripts/Player.gd" id="2_p4k8z"]
[ext_resource type="Script" uid="uid://dhgi4dxtpvsqw" path="res://scripts/SpellManager.gd" id="3_q6m9a"]
[ext_resource type="Texture2D" uid="uid://4fayulb770q1" path="res://sprites/player/human_male.png" id="4_aug50"]
[ext_resource type="Script" uid="uid://bw4xq5hglhwly" path="res://scripts/MonsterManager.gd" id="4_monster"]
[ext_resource type="Script" uid="uid://bata6eg8uwl2b" path="res://scripts/EnemyManager.gd" id="4_r7n0b"]
[ext_resource type="Script" uid="uid://dbe2jepdb3pqa" path="res://scripts/Background.gd" id="5_bg1n2"]
[ext_resource type="Texture2D" uid="uid://dghblywuetnsq" path="res://sprites/effects/magic_bolt_1.png" id="6_spell1"]
[ext_resource type="Texture2D" uid="uid://c7rmw8ac1eajp" path="res://sprites/effects/cloud_magic_trail_0.png" id="7_spell2"]
[ext_resource type="Texture2D" uid="uid://fqhw3dkfjp27" path="res://sprites/effects/icicle_0.png" id="8_spell3"]
[ext_resource type="Texture2D" uid="uid://m0hj35jw54xa" path="res://sprites/effects/cloud_calc_dust_0.png" id="9_spell4"]
[ext_resource type="Texture2D" uid="uid://dfqlpnpghjdhc" path="res://sprites/effects/zap_0.png" id="10_spell5"]
[ext_resource type="Texture2D" uid="uid://cgmex7kl3utg" path="res://sprites/effects/flame_0.png" id="11_spell6"]
[ext_resource type="Theme" uid="uid://c5k8pqw4dqh3k" path="res://themes/medieval_theme.tres" id="12_theme"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1v8p3"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
size = Vector2(80, 80)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill_xp"]
bg_color = Color(0.6, 0.6, 0.2, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.3, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spell_slot"]
bg_color = Color(0.25, 0.2, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.4, 0.3, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_2v3xy")

[node name="Background" type="Node2D" parent="."]
script = ExtResource("5_bg1n2")

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
collision_mask = 0
script = ExtResource("2_p4k8z")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(2, 2)
texture = ExtResource("4_aug50")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_1v8p3")

[node name="HitBox" type="Area2D" parent="Player"]
collision_mask = 2

[node name="HitBoxShape" type="CollisionShape2D" parent="Player/HitBox"]
shape = SubResource("RectangleShape2D_hitbox")
debug_color = Color(1, 0, 0, 0.3)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="SpellManager" type="Node" parent="."]
script = ExtResource("3_q6m9a")

[node name="EnemyManager_OLD" type="Node2D" parent="."]
process_mode = 4
script = ExtResource("4_r7n0b")

[node name="MonsterManager" type="Node2D" parent="."]
script = ExtResource("4_monster")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_theme")

[node name="StatsPanel" type="Panel" parent="UI/HUD"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -135.0
offset_right = 335.0
offset_bottom = -15.0

[node name="HealthBar" type="ProgressBar" parent="UI/HUD/StatsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 30.0
offset_right = -15.0
offset_bottom = 50.0
grow_horizontal = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="UI/HUD/StatsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 8.0
offset_right = -15.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 14
text = "Health"
horizontal_alignment = 1

[node name="XPBar" type="ProgressBar" parent="UI/HUD/StatsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 75.0
offset_right = -15.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill_xp")
show_percentage = false

[node name="XPLabel" type="Label" parent="UI/HUD/StatsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 53.0
offset_right = -15.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 14
text = "Experience"
horizontal_alignment = 1

[node name="TimerPanel" type="Panel" parent="UI/HUD"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 15.0
offset_right = 120.0
offset_bottom = 65.0

[node name="TimerLabel" type="Label" parent="UI/HUD/TimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultyLabel" type="Label" parent="UI/HUD/TimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 25.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Difficulty: 1.0x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultyTooltip" type="Panel" parent="UI/HUD"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 70.0
offset_right = 150.0
offset_bottom = 150.0

[node name="TooltipLabel" type="RichTextLabel" parent="UI/HUD/DifficultyTooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][b]Difficulty Scaling[/b][/center]
• Enemy Health: 1.5x
• Enemy Speed: 1.1x  
• Spawn Rate: 1.2x"
fit_content = true

[node name="SpellSlotsPanel" type="Panel" parent="UI/HUD"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = -100.0
offset_right = -10.0
offset_bottom = -15.0

[node name="SpellSlots" type="HBoxContainer" parent="UI/HUD/SpellSlotsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot1" type="Panel" parent="UI/HUD/SpellSlotsPanel/SpellSlots"]
custom_minimum_size = Vector2(60, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_spell_slot")

[node name="VBox" type="VBoxContainer" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot1/VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6_spell1")
expand_mode = 1
stretch_mode = 4

[node name="KeyLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot1/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "1"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -15.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot2" type="Panel" parent="UI/HUD/SpellSlotsPanel/SpellSlots"]
custom_minimum_size = Vector2(60, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_spell_slot")

[node name="VBox" type="VBoxContainer" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot2/VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("7_spell2")
expand_mode = 1
stretch_mode = 4

[node name="KeyLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot2/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "2"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -15.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
theme_override_font_sizes/font_size = 10
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot3" type="Panel" parent="UI/HUD/SpellSlotsPanel/SpellSlots"]
custom_minimum_size = Vector2(60, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_spell_slot")

[node name="VBox" type="VBoxContainer" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot3/VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("8_spell3")
expand_mode = 1
stretch_mode = 4

[node name="KeyLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot3/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "3"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -15.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
theme_override_font_sizes/font_size = 10
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot4" type="Panel" parent="UI/HUD/SpellSlotsPanel/SpellSlots"]
custom_minimum_size = Vector2(60, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_spell_slot")

[node name="VBox" type="VBoxContainer" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot4/VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("9_spell4")
expand_mode = 1
stretch_mode = 4

[node name="KeyLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot4/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "4"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot4"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -15.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
theme_override_font_sizes/font_size = 10
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot5" type="Panel" parent="UI/HUD/SpellSlotsPanel/SpellSlots"]
custom_minimum_size = Vector2(60, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_spell_slot")

[node name="VBox" type="VBoxContainer" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot5/VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("10_spell5")
expand_mode = 1
stretch_mode = 4

[node name="KeyLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot5/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "5"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot5"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -15.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
theme_override_font_sizes/font_size = 10
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot6" type="Panel" parent="UI/HUD/SpellSlotsPanel/SpellSlots"]
custom_minimum_size = Vector2(60, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_spell_slot")

[node name="VBox" type="VBoxContainer" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot6/VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("11_spell6")
expand_mode = 1
stretch_mode = 4

[node name="KeyLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot6/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "6"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/HUD/SpellSlotsPanel/SpellSlots/Slot6"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -15.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
theme_override_font_sizes/font_size = 10
text = "15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypingPanel" type="Panel" parent="UI/HUD"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -60.0
offset_right = 250.0
offset_bottom = 60.0

[node name="TypingArea" type="VBoxContainer" parent="UI/HUD/TypingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TypingLabel" type="Label" parent="UI/HUD/TypingPanel/TypingArea"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseOverlay" type="ColorRect" parent="UI"]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="PauseMenu" type="Panel" parent="UI/PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseOverlay/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/PauseOverlay/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 24
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="UI/PauseOverlay/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="UI/PauseOverlay/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "RESUME"

[node name="OptionsButton" type="Button" parent="UI/PauseOverlay/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "OPTIONS"

[node name="RestartButton" type="Button" parent="UI/PauseOverlay/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="UI/PauseOverlay/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "MAIN MENU"

[connection signal="body_entered" from="Player/HitBox" to="Player" method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="Player/HitBox" to="Player" method="_on_hit_box_body_exited"]
[connection signal="pressed" from="UI/PauseOverlay/PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_pause_resume_pressed"]
[connection signal="pressed" from="UI/PauseOverlay/PauseMenu/VBoxContainer/OptionsButton" to="." method="_on_pause_options_pressed"]
[connection signal="pressed" from="UI/PauseOverlay/PauseMenu/VBoxContainer/RestartButton" to="." method="_on_pause_restart_pressed"]
[connection signal="pressed" from="UI/PauseOverlay/PauseMenu/VBoxContainer/MainMenuButton" to="." method="_on_pause_main_menu_pressed"]
